infra/inference/gke/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coordinator-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: inference-gke-lb-ip
spec:
  defaultBackend:
    service:
      name: coordinator
      port:
        number: 80
